# zeroquery-protocol

./: .gitignore  AGENTS.md  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  llms.txt  mcp.json  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  sovereign-data-check.yml
.well-known/: agent.json  ai.txt
ai/: faq.json  summary.json
circuits/: README.md  build.sh  package.json  provenance.circom  reference.mjs  reference.test.mjs
docs/: ARCHITECTURE.md  AUDIT.md  COMPLIANCE.md  DEPLOY.md  INTEGRATION_GUIDE.md  PHASE1.md  PHASE2.md  PITCH_DECK.md  pitch.html
examples/: end-to-end.mjs
hooks/xah-did/: README.md  build.sh  did_hook.c  hookapi.h
programs/poi-escrow/: Cargo.toml
programs/poi-escrow/src/: lib.rs
programs/poi-gossip/: Cargo.toml
programs/poi-gossip/src/: lib.rs
programs/poi-subscription/: Cargo.toml
programs/poi-subscription/src/: lib.rs
programs/poi-verifier/: Cargo.toml
programs/poi-verifier/src/: lib.rs
schema/: breach.schema.json  intent.example.jsonld  intent.schema.json  registry-entry.schema.json
scripts/: check-sovereign-data.sh  deploy_devnet.ps1  deploy_devnet.sh
tests/: poi-verifier.ts
