# Cargo workspace for the ZeroQuery / Proof-of-Intent Solana programs.
[workspace]
members = ["programs/*"]
exclude = ["packages/zk-circuits/program", "packages/zk-circuits/script"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
