[package]
name = "poi-verifier"
version = "0.1.0"
description = "ZK Provenance Verifier for ZeroQuery Phase 2"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poi_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
poi-escrow = { path = "../poi-escrow", features = ["cpi"] }
